<resources>
    <string name="app_name">Kkosunae</string>

    <!--    bottom navigation menu title    -->
    <string name="menu_home">홈</string>
    <string name="menu_map">지도</string>
    <string name="menu_community">커뮤</string>
    <string name="menu_point">포인트</string>
    <string name="menu_mypage">마이</string>

    <!--    tool bar title    -->
    <string name="toolbar_menu_home">꼬순내</string>
    <string name="toolbar_menu_map">지도</string>
    <string name="toolbar_menu_point">포인트</string>
    <string name="toolbar_menu_community">커뮤니티</string>
    <string name="toolbar_menu_mypage">마이페이지</string>
    <string name="toolbar_menu_notification">알림</string>
    <string name="toolbar_menu_write">발도장 찍기</string>
    <string name="toolbar_menu_walk_statistic">산책 통계</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>